# Detectia_si_corectarea_ochilor_rosii

./: CMakeLists.txt  Documentație la Proiect de detecție și corectare a ochiilor roșii.docx  ImageLoader.cpp  ImageLoader.h  README.md  RedEyeCorrector.cpp  RedEyeCorrector.h  RedEyeDetector.cpp  RedEyeDetector.h  RedEyeProcessor.cpp  RedEyeProcessor.h  main.cpp  ~$cumentație la Proiect de detecție și corectare a ochiilor roșii.docx
